<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;

//Generated By PlantUML Command
class CuidadorEspecialidad extends Model
{
    protected $fillable = [
        'cuidador_id',
        'especialidad_id',
    ];

    public function cuidador()
    {
        return $this->belongsTo('App\Models\Cuidador', 'cuidador_id');
    }

    public function especie()
    {
        return $this->belongsTo('App\Models\Especie', 'especie_id');
    }
}
