<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;

//Generated By PlantUML Command
class Especie extends Model
{
    protected $fillable = [
        'nombre',
        'descripcion',
    ];

    public function animals()
    {
        return $this->hasMany('App\Models\Animal', 'especie_id');
    }

    public function cuidadorespecialidads()
    {
        return $this->hasMany('App\Models\CuidadorEspecialidad', 'especie_id');
    }
}
